Fixed reserving and renting a car