@@ -41,12 +41,6 @@ layout.buildDirectory.set(file('bin'))
 tasks.withType(JavaExec).configureEach {
     standardInput = System.in
 
-    // Add these flags to permit reflection on internal Java modules
-    jvmArgs(
-            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
-            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
-    )
-
     if (project.hasProperty('myargs')) {
         args(myargs.split(' ').collect { it.trim() })
     }
